# Browseraptor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  bundle_macos.sh  patch.diff  patch.py
.github/workflows/: build-binaries.yml  ci.yml
src/: app.rs  default_browser.rs  hotkey.rs  main.rs  main.rs.orig  main.rs.patch  main.rs.rej  single_instance.rs  tray.rs
src/browser/: detector.rs  launcher.rs  mod.rs
src/config/: mod.rs  rules.rs
src/plugin/: mod.rs
src/ui/: default_prompt.rs  mod.rs  selector.rs
