[package]
name = "browseraptor"
version = "0.2.0"
edition = "2021"
description = "A programmable browser selector — intercept links, route to the right browser."
authors = ["Livrasand"]
license = "MIT"
repository = "https://github.com/livrasand/browseraptor"

[dependencies]
gpui = "0.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
wasmtime = "14"
anyhow = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
regex-lite = "0.1"
futures = "0.3.32"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSApplication",
    "NSApplicationScripting",
    "NSButton",
    "NSResponder",
    "NSView",
    "NSControl",
    "NSEvent",
    "NSWorkspace",
    "NSRunningApplication",
] }
block2 = "0.6"
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
